@@ -26,6 +26,7 @@ slip_coeff = 0
 stress_calc = 0
 evolution = 2
 vertical_integration = 0
+hotstart=0
 
 [time]
 dt = 1.
@@ -63,9 +64,14 @@ spoty:     70 10 30 100
 comment:   spots are taken at nodes
 
 [CF output]
-name:      g_land.10a.nc
-frequency: 10
-variables: glint_prcp glint_acab glint_ablt glint_artm global_orog local_orog acab glint_thk thk
+name:      g_land.1a.nc
+frequency: 1
+variables: glint_prcp glint_acab glint_ablt glint_artm global_orog local_orog acab glint_thk thk usurf snowd siced
+
+[CF output]
+name:      g_land.hot.nc
+frequency: 100
+variables: hot
 
 [CF input]
 name: g_land.input.nc
