@@ -1,5 +1,7 @@
 2005-03-09 Ian Rutt
  * Added glimmer_daily_pdd.f90 - fully plumbed in.
+ * Updated glint to have configureable number of days in year
+ * Added ncep data for 6h temperatures and adjusted glint_example.f90
 
 2005-03-08 Magnus Hagdorn
  * removed install-sh, it is autogenerated when bootstrap is run
